--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,11 @@
             <version>9.4.1211.jre7</version>
         </dependency>
         <dependency>
+            <groupId>commons-dbutils</groupId>
+            <artifactId>commons-dbutils</artifactId>
+            <version>1.6</version>
+        </dependency>
+        <dependency>
             <groupId>com.healthmarketscience.sqlbuilder</groupId>
             <artifactId>sqlbuilder</artifactId>
             <version>2.1.5</version>
